@@ -26,13 +26,10 @@ distclean: clean
 
 install-man:
 	mkdir -p $(DESTDIR)$(MANDIR)/man1/
-	cp axel.1 $(DESTDIR)$(MANDIR)/man1/axel.1
-	mkdir -p $(DESTDIR)$(MANDIR)/zh_CN/man1/
-	cp axel_zh_CN.1 $(DESTDIR)$(MANDIR)/zh_CN/man1/axel.1
+	cp man/axel.1 $(DESTDIR)$(MANDIR)/man1/axel.1
 
 uninstall-man:
 	rm -f $(MANDIR)/man1/axel.1
-	rm -f $(MANDIR)/zh_CN/man1/axel.1
 
 install-etc:
 	mkdir -p $(DESTDIR)$(ETCDIR)/
