@@ -1,0 +1,133 @@
+.TH axel "1" "Nov 2015" "AXEL 2.5" "light command line download accelerator"
+.\" Text automatically generated by txt2man
+.SH NAME
+\fBaxel \fP- light command line download accelerator
+\fB
+.SH SYNOPSIS
+.nf
+.fam C
+ \fBaxel\fP [\fIOPTIONS\fP] \fIurl1\fP [\fIurl2\fP] [url\.\.\.]
+
+.fam T
+.fi
+.fam T
+.fi
+.SH DESCRIPTION
+Axel is a program that downloads a file from a FTP or HTTP server through multiple connection.
+Each connection downloads its own part of the file.
+.PP
+Unlike most other programs, Axel downloads all the data directly to the destination file, using
+one single thread. It just saves some time at the end because the program does not have to
+concatenate all the downloaded parts.
+.SH OPTIONS
+One argument is required, the URL to the file you want to download. When downloading from FTP,
+the filename may contain wildcards and the program will try to resolve the full filename. Multiple
+URL's can be specified as well and the program will use all those URL's for the download. Please
+note that the program does not check whether the files are equal.
+.PP
+Other options:
+.TP
+.B
+\fB--max-speed\fP=x, \fB-s\fP x
+Specify a speed (bytes per second) to try to keep the average speed around this
+speed. This is useful if you do not want the program to suck up all of your
+bandwidth.
+.TP
+.B
+\fB--num-connections\fP=x, \fB-n\fP x
+Specify an alternative number of connections.
+.TP
+.B
+\fB--output\fP=x, \fB-o\fP x
+Downloaded data will be put in a local file with the same name, unless you specify
+a different name using this option. You can specify a directory as well, the program
+will append the filename.
+.TP
+.B
+\fB--search\fP[=x], \fB-S\fP[x]
+Axel can do a search for mirrors using the filesearching.com search engine. This
+search will be done if you use this option. You can specify how many different
+mirrors should be used for the download as well. The search for mirrors can be
+time-consuming because the program tests every server's speed, and it checks
+whether the file's still available.
+.TP
+.B
+\fB--no-proxy\fP, \fB-N\fP
+Do not use any proxy server to download the file. Not possible when a transparent proxy
+is active somewhere, of course.
+.TP
+.B
+\fB--verbose\fP
+Show more status messages. Use it more than once to see more details.
+.TP
+.B
+\fB--quiet\fP, \fB-q\fP
+No output to stdout.
+.TP
+.B
+\fB--alternate\fP, \fB-a\fP
+This will show an alternate progress indicator. A bar displays the progress and status
+of the different threads, along with current speed and an estimate for the remaining
+download time.
+.TP
+.B
+\fB--header\fP=x, \fB-H\fP x
+Add an additional HTTP header. This option should be in the form "Header: Value". See
+RFC 2616 section 4.2 and 14 for details on the format and standardized headers.
+.TP
+.B
+\fB--user-agent\fP=x, \fB-U\fP x
+Set the HTTP user agent to use. Some websites serve different content based upon
+this parameter. The default value will include "Axel", its version and the platform.
+.TP
+.B
+\fB--help\fP, \fB-h\fP
+A brief summary of all the options.
+.TP
+.B
+\fB--version\fP, \fB-V\fP
+Get version information.
+.SH NOTE
+Long (double dash) options are supported only if your platform knows about the getopt_long call. If it
+does not (like *BSD), only the short options can be used.
+.SH RETURN VALUE
+The program returns 0 when the download was succesful, 1 if something really went wrong and 2 if the
+download was interrupted. If something else comes back, it must be a bug.
+.SH EXAMPLES
+This will use the Belgian, Dutch, English and German kernel.org mirrors to download a Linux 2.4.17
+kernel image.
+.PP
+.nf
+.fam C
+    axel ftp://ftp.{be,nl,uk,de}.kernel.org/pub/linux/kernel/v2.4/linux-2.4.17.tar.bz2
+
+.fam T
+.fi
+This will do a search for the linux-2.4.17.tar.bz2 file on filesearching.com and it'll use the four (if possible)
+fastest mirrors for the download (possibly including ftp.kernel.org). Of course, the commands are a single
+line, but they're too long to fit on one line in this page.
+.PP
+.nf
+.fam C
+    axel -S4 ftp://ftp.kernel.org/pub/linux/kernel/v2.4/linux-2.4.17.tar.bz2
+
+.fam T
+.fi
+.SH FILES
+.TP
+.B
+/etc/axelrc
+System-wide configuration file.
+.TP
+.B
+~/.axelrc
+Personal configuration file
+.PP
+These files are not documented in a manpage, but the example file which comes with the program contains
+enough information. The position of the system-wide configuration file might be different.
+.SH COPYRIGHT
+Axel was originaly written by Wilmer van der Gaast and other authors over time. Please, see the AUTHORS file.
+.PP
+The current Axel homepage (since 2015) is https://github.com/eribertomota/\fBaxel\fP
+.SH HELP THIS PROJECT
+If you intent to help, please, read the README.to-contribute file.
